fix deleting comment button and fix alignments of comment editing properties

--- a/app/assets/stylesheets/generators.scss
+++ b/app/assets/stylesheets/generators.scss
@@ -650,7 +650,7 @@ td{
   color:green !important; //rgb(56, 55, 55);
 }
 
-.comment-item-container {
+.comment-reaction-item-container {
   text-align: center;
 }
 
@@ -806,9 +806,8 @@ td{
 }
 
 .comment-edit-list-group {
-  margin-left: auto;
+  // margin-left: auto;
   // float: right;
-  // text-align: right;
   // justify-content: right;
   // align-items: right;
 }
